--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </section>
         </main>
         <footer class="footer">
-            <div class="container-footer">
+            <div class="container">
                 <a class="footer-link" href="./index.html">Web<span class="footer-logo">Studio</span></a>
                 <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div>
